# Editium

./: gradle.properties  gradlew  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/editium/app/: App.kt
app/src/main/kotlin/com/editium/app/di/: AppModule.kt
app/src/main/kotlin/com/editium/app/ui/: MainActivity.kt
app/src/main/kotlin/com/editium/app/ui/audio/: AudioMixerPanel.kt
app/src/main/kotlin/com/editium/app/ui/editor/: EditorScreen.kt  VideoEditorFragment.kt  VideoEditorViewModel.kt
app/src/main/kotlin/com/editium/app/ui/effects/: EffectsPanel.kt
app/src/main/kotlin/com/editium/app/ui/export/: ExportDialog.kt  ExportScreen.kt
app/src/main/res/values/: strings.xml
config/proguard/: proguard-android-optimize.pro  proguard-consumer-rules.pro  proguard-ffmpeg.pro
core-audio/: build.gradle.kts
core-data/: build.gradle.kts
core-ui/: build.gradle.kts
core-video/: build.gradle.kts
core-video/src/main/assets/luts/: rec709.cube
core-video/src/main/assets/shaders/: color_grading.frag
core-video/src/main/cpp/: CMakeLists.txt
feature-effects/: build.gradle.kts
feature-export/: build.gradle.kts
feature-project/: build.gradle.kts
feature-timeline/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
qa/benchmark/macrobenchmark/: build.gradle.kts
qa/static-analysis/: detekt.yml  ktlint.gradle.kts
scripts/: build_ffmpeg.sh  strip_symbols.sh  verify_codecs.sh
versions/: libs.versions.toml
(+69 files in other folders)
